#ifndef DECODEINPUT_H
#define DECODEINPUT_H

#include "operators.h"
// #include "../../proto/EndDeviceProtocol.pb.h"

// Instruction decodeInstructionuction(EndDeviceProtocol__Data *data);
// Message decodeMessage(uint8_t * input, int size);

// Instruction dataToInstructionType(EndDeviceProtocol__Data *data);
// Map mapOperationToMapType(EndDeviceProtocol__MapOperation *op);
// Filter filterToFilterType(EndDeviceProtocol__FilterOperation *op);
// Window windowToWindowType(EndDeviceProtocol__WindowOperation *op);
// Operation operationToOperationType(EndDeviceProtocol__Operation *op);
// Query edpQueryToQueryType(EndDeviceProtocol__Query *query);

#endif /* DECODEINPUT_H */